# music-platform-api

./: .env.example  .gitignore  README.md  celerybeat-schedule.bak  conftest.py  manage.py  pyproject.toml  requirements.txt  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md
albums/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_isapproved.py  0003_rename_albumartist_album_album_artist_and_more.py
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_rename_sociallink_artist_social_link_and_more.py
authentication/: forms.py  permissions.py  serializers.py  urls.py  views.py
musicplatform/: Result.md  asgi.py  celery.py  pytest.ini  settings.py  urls.py  wsgi.py
musicplatform/albums/: admin.py  tasks.py  urls.py
musicplatform/artists/tests/: test_endpoints.py
musicplatform/authentication/: serializers.py
musicplatform/authentication/tests/: test_endpoints.py
musicplatform/musicplatform/: settings.py  urls.py
musicplatform/templates/: home.html
musicplatform/users/tests/: test_endpoints.py
static/: forms_style.css  index.css
templates/: artists.html  create_album.html  create_artist.html  home.html  login.html  signup.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_bio.py
users/tests/: test_endpoints.py
